test/simple/correct/Simple.hs
module Simple where

main :: Int
main = 3