test/simple/typeerrors/Heuristics/FBHasTooMany1.hs
module FBHasTooMany1 where

f :: Int 
f x = x + x
